merge release verifier 1.5.0.0