@@ -1,11 +1,11 @@
 /*
- * Copyright 2022 Post CH Ltd
+ * (c) Copyright 2024 Swiss Post Ltd.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -35,30 +35,38 @@ import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
+
 import javax.xml.datatype.XMLGregorianCalendar;
 
 import org.apache.commons.codec.digest.DigestUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Component;
 
 import com.google.common.collect.MoreCollectors;
 
-import ch.post.it.evoting.cryptoprimitives.domain.election.ElectionEventContext;
-import ch.post.it.evoting.cryptoprimitives.domain.election.VerificationCardSetContext;
+import ch.post.it.evoting.evotinglibraries.domain.election.ElectionEventContext;
+import ch.post.it.evoting.evotinglibraries.domain.election.VerificationCardSetContext;
+import ch.post.it.evoting.evotinglibraries.domain.encryption.StreamedEncryptionDecryptionService;
+import ch.post.it.evoting.evotinglibraries.domain.mixnet.ElectionEventContextPayload;
+import ch.post.it.evoting.evotinglibraries.domain.validations.PasswordValidation;
 import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingconfig.AuthorizationType;
 import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingconfig.Configuration;
 import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingconfig.ElectionGroupBallotType;
 import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingconfig.VoteInformationType;
-import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingdecrypt.ElectionType;
+import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingdecrypt.ElectionGroupType;
 import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingdecrypt.Results;
 import ch.post.it.evoting.evotinglibraries.xml.xmlns.evotingdecrypt.VoteType;
 import ch.post.it.evoting.verifier.backend.AbstractVerification;
 import ch.post.it.evoting.verifier.backend.dto.DatasetConfiguration;
+import ch.post.it.evoting.verifier.backend.dto.DatasetConfigurationContext;
+import ch.post.it.evoting.verifier.backend.dto.DatasetConfigurationSetup;
+import ch.post.it.evoting.verifier.backend.dto.DatasetConfigurationTally;
 import ch.post.it.evoting.verifier.backend.dto.Verification;
 import ch.post.it.evoting.verifier.backend.event.PreSetupEvent;
 import ch.post.it.evoting.verifier.backend.event.PreTallyEvent;
@@ -68,36 +76,51 @@ import ch.post.it.evoting.verifier.backend.mapper.VerificationMapper;
 import ch.post.it.evoting.verifier.backend.tools.Dataset;
 import ch.post.it.evoting.verifier.backend.tools.DatasetExtractionException;
 import ch.post.it.evoting.verifier.backend.tools.DatasetService;
+import ch.post.it.evoting.verifier.backend.tools.DatasetType;
 import ch.post.it.evoting.verifier.backend.tools.DirectoryService;
 import ch.post.it.evoting.verifier.backend.tools.ElectionDataExtractionService;
 
 @Component
 public class VerifierProcessor {
 	private static final Logger LOGGER = LoggerFactory.getLogger(VerifierProcessor.class);
-
+	private static final byte[] ASSOCIATED_DATA = new byte[] {};
 	private static final String SETUP = SetupEvent.TYPE;
 	private static final String TALLY = TallyEvent.TYPE;
 	private static final String PRE_SETUP = PreSetupEvent.TYPE;
 	private static final String PRE_TALLY = PreTallyEvent.TYPE;
+	private static final String HASH_SPLIT_REGEX = "(?<=\\G.{2})";
+	private static final String HASH_DELIMITER = ":";
 	private final ApplicationContext applicationContext;
 	private final ApplicationEventPublisher applicationEventPublisher;
 	private final DatasetService datasetService;
 	private final ElectionDataExtractionService electionDataExtractionService;
 	private final DirectoryService directoryService;
-	private Dataset dataset;
-	private DatasetConfiguration datasetConfiguration;
+	private final StreamedEncryptionDecryptionService streamedEncryptionDecryptionService;
+	private final char[] importDecryptionPassword;
+	private Dataset contextDataset;
+	private Dataset setupDataset;
+	private Dataset tallyDataset;
+	private DatasetConfigurationContext datasetConfigurationContext;
+	private DatasetConfigurationSetup datasetConfigurationSetup;
+	private DatasetConfigurationTally datasetConfigurationTally;
 	private List<Verification> verifications;
 
 	public VerifierProcessor(final ApplicationContext applicationContext,
 			final ApplicationEventPublisher applicationEventPublisher,
 			final DatasetService datasetService,
 			final ElectionDataExtractionService electionDataExtractionService,
-			final DirectoryService directoryService) {
+			final DirectoryService directoryService,
+			final StreamedEncryptionDecryptionService streamedEncryptionDecryptionService,
+			@Value("${import.zip.decryption.password}")
+			final char[] importDecryptionPassword) {
 		this.applicationContext = applicationContext;
 		this.applicationEventPublisher = applicationEventPublisher;
 		this.datasetService = datasetService;
 		this.electionDataExtractionService = electionDataExtractionService;
 		this.directoryService = directoryService;
+		this.streamedEncryptionDecryptionService = streamedEncryptionDecryptionService;
+		this.importDecryptionPassword = importDecryptionPassword;
+		PasswordValidation.validate(this.importDecryptionPassword, "import decryption");
 	}
 
 	@PostConstruct
@@ -115,8 +138,8 @@ public class VerifierProcessor {
 		final List<Verification> result = new ArrayList<>(verifications);
 		result.sort(Comparator.comparing(Verification::getBlock)
 				.thenComparing((o1, o2) -> {
-					double id1 = Double.parseDouble(o1.getVerificationId());
-					double id2 = Double.parseDouble(o2.getVerificationId());
+					final double id1 = Double.parseDouble(o1.getVerificationId());
+					final double id2 = Double.parseDouble(o2.getVerificationId());
 					return Double.compare(id1, id2);
 				}));
 
@@ -128,58 +151,68 @@ public class VerifierProcessor {
 	}
 
 	public DatasetConfiguration getDatasetConfiguration() {
-		return datasetConfiguration;
+		return new DatasetConfiguration(datasetConfigurationContext, datasetConfigurationSetup, datasetConfigurationTally);
 	}
 
-	public void setDataset(final InputStream datasetInputStream, final String filename) throws DatasetExtractionException {
+	public void setDataset(final InputStream datasetInputStream, final String filename, final DatasetType datasetType)
+			throws DatasetExtractionException {
+		checkNotNull(datasetInputStream);
+		checkNotNull(filename);
+		checkNotNull(datasetType);
+
+		switch (datasetType) {
+		case CONTEXT -> setDatasetContext(datasetInputStream, filename);
+		case SETUP -> setDatasetSetup(datasetInputStream, filename);
+		case TALLY -> setDatasetTally(datasetInputStream, filename);
+		default -> throw new IllegalArgumentException("The dataset type does not exist.");
+		}
+	}
+
+	private void setDatasetContext(final InputStream datasetInputStream, final String filename) throws DatasetExtractionException {
 		checkNotNull(datasetInputStream);
 		checkNotNull(filename);
 
-		final Path tempDirectory;
+		if (this.contextDataset != null) {
+			datasetService.clean(contextDataset, false);
+		}
+		this.setupDataset = null;
+		this.tallyDataset = null;
+		this.datasetConfigurationSetup = null;
+		this.datasetConfigurationTally = null;
+
+		final Path directory;
 		try {
-			tempDirectory = directoryService.createSecuredTemporaryDirectory("verifier-dataset");
+			directory = directoryService.createSecuredDirectory();
 		} catch (final IOException e) {
-			throw new DatasetExtractionException("Could not create secured temporary directory for dataset extraction.");
+			throw new DatasetExtractionException("Could not create secured directory for dataset extraction.");
 		}
 
-		LOGGER.debug("Secured temporary directory successfully created. [directory: {}]", tempDirectory);
+		LOGGER.debug("Secured directory successfully created for dataset. [directory: {}]", directory);
 
-		if (this.dataset != null) {
-			datasetService.clean(dataset);
-		}
+		this.contextDataset = downloadDataset(datasetInputStream, directory, DatasetType.CONTEXT);
 
-		this.dataset = new Dataset(datasetInputStream, tempDirectory);
-
-		LOGGER.info("Dataset successfully downloaded.");
-
-		final CompletableFuture<String> datasetHashCompletableFuture = getDatasetHashCompletableFuture();
-
-		final Path inputDirectory;
-		try {
-			inputDirectory = datasetService.unpack(dataset).getUnpackFolder();
-		} catch (final IOException e) {
-			throw new UncheckedIOException(e);
-		}
-
-		LOGGER.info("Dataset successfully unpacked.");
+		final CompletableFuture<String> datasetHashCompletableFuture = getDatasetHashCompletableFuture(contextDataset);
+		final Path inputDirectory = unpackDataset(contextDataset);
 
 		// Get election event id and number of voters from election event context.
 		final ElectionEventContext electionEventContext = electionDataExtractionService.getElectionEventContext(inputDirectory);
 
-		// Get election event name, election event date, number of elections, number of votes, number of non-test ballot boxes, number of test
-		// ballot boxes, total number of authorized non-test voters and total number of test voters
-		final Configuration configuration = electionDataExtractionService.getCantonConfig(inputDirectory);
-
 		final String electionEventId = electionEventContext.electionEventId();
 		final Map<Boolean, Integer> testBallotBoxToTotalNumberOfVoters = electionEventContext.verificationCardSetContexts().stream()
 				.collect(Collectors.partitioningBy(
-						VerificationCardSetContext::testBallotBox,
-						Collectors.summingInt(VerificationCardSetContext::numberOfVotingCards)));
+						VerificationCardSetContext::isTestBallotBox,
+						Collectors.summingInt(VerificationCardSetContext::getNumberOfVotingCards)));
+
+		// Get election event name, election event date, number of elections, number of votes, number of non-test ballot boxes, number of test
+		// ballot boxes, total number of authorized non-test voters and total number of test voters.
+		final Configuration configuration = electionDataExtractionService.getCantonConfig(inputDirectory);
+
+		// Get election event seed.
+		final ElectionEventContextPayload electionEventContextPayload = electionDataExtractionService.getElectionEventContextPayload(inputDirectory);
+		final String electionEventSeed = electionEventContextPayload.getSeed();
 
 		// Get the direct trust certificate fingerprints.
 		final Map<String, String> aliasesToFingerprints = datasetService.extractFingerprints();
-
-		final String datasetHash = datasetHashCompletableFuture.join();
 
 		LOGGER.info("Dataset digest successfully computed.");
 
@@ -203,30 +236,88 @@ public class VerifierProcessor {
 				.mapToInt(ballotType -> ballotType == null ? 0 : 1)
 				.reduce(0, Math::addExact);
 
-		final long numberOfNonTestBallotBoxes = configuration.getAuthorizations().getAuthorization().stream().parallel()
+		final int numberOfNonTestBallotBoxes = Math.toIntExact(configuration.getAuthorizations().getAuthorization().stream().parallel()
 				.filter(authorizationType -> !authorizationType.isAuthorizationTest())
-				.count();
+				.count());
 
-		final long numberOfTestBallotBoxes = configuration.getAuthorizations().getAuthorization().stream().parallel()
+		final int numberOfTestBallotBoxes = Math.toIntExact(configuration.getAuthorizations().getAuthorization().stream().parallel()
 				.filter(AuthorizationType::isAuthorizationTest)
-				.count();
+				.count());
 
-		Integer numberOfConfirmedNonTestVotes = null;
-		Integer numberOfConfirmedTestVotes = null;
-		if (electionDataExtractionService.existsTallyComponentDecrypt(inputDirectory)) {
-			final Results tallyComponentDecrypt = electionDataExtractionService.getTallyComponentDecrypt(inputDirectory);
+		final String datasetHash = datasetHashCompletableFuture.join();
 
-			numberOfConfirmedNonTestVotes = getNumberOfConfirmedVotes(configuration, tallyComponentDecrypt, false);
-			numberOfConfirmedTestVotes = getNumberOfConfirmedVotes(configuration, tallyComponentDecrypt, true);
-		}
-
-		this.datasetConfiguration = new DatasetConfiguration(filename, String.join(":", datasetHash.split("(?<=\\G.{2})")), electionEventId,
-				aliasesToFingerprints, electionEventName, formattedElectionEventDate, numberOfElections, numberOfVotes, numberOfBallots,
-				numberOfNonTestBallotBoxes, numberOfTestBallotBoxes, testBallotBoxToTotalNumberOfVoters.get(false),
-				testBallotBoxToTotalNumberOfVoters.get(true), numberOfConfirmedNonTestVotes, numberOfConfirmedTestVotes);
+		this.datasetConfigurationContext = new DatasetConfigurationContext.Builder()
+				.setFilename(filename)
+				.setHash(String.join(HASH_DELIMITER, datasetHash.split(HASH_SPLIT_REGEX)))
+				.setElectionEventId(electionEventId)
+				.setAliasesToFingerprints(aliasesToFingerprints)
+				.setElectionEventName(electionEventName)
+				.setElectionEventSeed(electionEventSeed)
+				.setElectionEventDate(formattedElectionEventDate)
+				.setNumberOfElections(numberOfElections)
+				.setNumberOfVotes(numberOfVotes)
+				.setNumberOfBallots(numberOfBallots)
+				.setNumberOfNonTestBallotBoxes(numberOfNonTestBallotBoxes)
+				.setNumberOfTestBallotBoxes(numberOfTestBallotBoxes)
+				.setTotalNumberOfAuthorizedNonTestVoters(testBallotBoxToTotalNumberOfVoters.get(false))
+				.setTotalNumberOfTestVoters(testBallotBoxToTotalNumberOfVoters.get(true))
+				.build();
 	}
 
-	private CompletableFuture<String> getDatasetHashCompletableFuture() {
+	private void setDatasetSetup(final InputStream datasetInputStream, final String filename) {
+		checkNotNull(datasetInputStream);
+		checkNotNull(filename);
+		checkNotNull(datasetConfigurationContext, "A context dataset must be uploaded first.");
+
+		if (this.setupDataset != null) {
+			datasetService.clean(setupDataset, false);
+		}
+		this.setupDataset = downloadDataset(datasetInputStream, contextDataset.getUnpackFolder(), DatasetType.SETUP);
+
+		final CompletableFuture<String> datasetHashCompletableFuture = getDatasetHashCompletableFuture(setupDataset);
+		checkNotNull(unpackDataset(setupDataset));
+
+		final String datasetHash = datasetHashCompletableFuture.join();
+
+		this.datasetConfigurationSetup = new DatasetConfigurationSetup(filename, String.join(HASH_DELIMITER, datasetHash.split(HASH_SPLIT_REGEX)));
+	}
+
+	private void setDatasetTally(final InputStream datasetInputStream, final String filename) {
+		checkNotNull(datasetInputStream);
+		checkNotNull(filename);
+		checkNotNull(datasetConfigurationContext, "A context dataset must be uploaded first.");
+
+		if (this.tallyDataset != null) {
+			datasetService.clean(tallyDataset, false);
+		}
+		this.tallyDataset = downloadDataset(datasetInputStream, contextDataset.getUnpackFolder(), DatasetType.TALLY);
+
+		final CompletableFuture<String> datasetHashCompletableFuture = getDatasetHashCompletableFuture(tallyDataset);
+		final Path inputDirectory = unpackDataset(tallyDataset);
+
+		final Results tallyComponentDecrypt = electionDataExtractionService.getTallyComponentDecrypt(inputDirectory);
+
+		final Configuration configuration = electionDataExtractionService.getCantonConfig(inputDirectory);
+		final int numberOfConfirmedNonTestVotes = getNumberOfConfirmedVotes(configuration, tallyComponentDecrypt, false);
+		final int numberOfConfirmedTestVotes = getNumberOfConfirmedVotes(configuration, tallyComponentDecrypt, true);
+
+		final String datasetHash = datasetHashCompletableFuture.join();
+
+		this.datasetConfigurationTally = new DatasetConfigurationTally(filename, String.join(HASH_DELIMITER, datasetHash.split(HASH_SPLIT_REGEX)),
+				numberOfConfirmedNonTestVotes, numberOfConfirmedTestVotes);
+	}
+
+	private Dataset downloadDataset(final InputStream datasetInputStream, final Path directory, final DatasetType datasetType) {
+
+		final InputStream decryptedStream = streamedEncryptionDecryptionService.decrypt(datasetInputStream, importDecryptionPassword,
+				ASSOCIATED_DATA);
+
+		LOGGER.info("Dataset successfully downloaded.");
+
+		return new Dataset(decryptedStream, directory, datasetType);
+	}
+
+	private CompletableFuture<String> getDatasetHashCompletableFuture(final Dataset dataset) {
 		return CompletableFuture.supplyAsync(() -> {
 			try (final InputStream unpackedDatasetInputStream = dataset.newInputStream()) {
 				return DigestUtils.sha256Hex(unpackedDatasetInputStream).toUpperCase();
@@ -236,11 +327,29 @@ public class VerifierProcessor {
 		});
 	}
 
-	public void process(final String runOption) {
-		checkNotNull(dataset, "A dataset must be uploaded before running the process.");
-		checkState(dataset.isUnpacked(), "A dataset must be unpacked before running the process.");
+	private Path unpackDataset(final Dataset dataset) {
+		final Path inputDirectory;
+		try {
+			inputDirectory = datasetService.unpack(dataset).getUnpackFolder();
+		} catch (final IOException e) {
+			throw new UncheckedIOException(e);
+		}
 
-		final Path inputDirectory = dataset.getUnpackFolder();
+		LOGGER.info("Dataset successfully unpacked.");
+
+		return inputDirectory;
+	}
+
+	public void process(final String runOption) {
+		checkNotNull(contextDataset, "A context dataset must be uploaded before running the process.");
+		checkState(Objects.nonNull(setupDataset) || Objects.nonNull(tallyDataset),
+				"Either a setup or tally dataset must be uploaded before running the process.");
+		checkState(contextDataset.isUnpacked(), "A context dataset must be unpacked before running the process.");
+		checkState((Objects.nonNull(setupDataset) && setupDataset.isUnpacked()) || (Objects.nonNull(tallyDataset) && tallyDataset.isUnpacked()),
+				"Either a setup or tally dataset must be unpacked before running the process.");
+
+		// the context, setup and tally dataset are unpacked in the same folder.
+		final Path inputDirectory = contextDataset.getUnpackFolder();
 
 		LOGGER.debug("The input directory is {}", inputDirectory);
 
@@ -255,10 +364,23 @@ public class VerifierProcessor {
 
 	@PreDestroy
 	public void clean() {
-		if (this.dataset != null) {
-			datasetService.clean(dataset);
-			this.dataset = null;
+		if (this.contextDataset != null) {
+			datasetService.clean(contextDataset, false);
+			this.contextDataset = null;
 		}
+		if (this.setupDataset != null) {
+			datasetService.clean(setupDataset, false);
+			this.setupDataset = null;
+		}
+		if (this.tallyDataset != null) {
+			datasetService.clean(tallyDataset, false);
+			this.tallyDataset = null;
+		}
+	}
+
+	public void cleanSetupTally() {
+		this.setupDataset = null;
+		this.tallyDataset = null;
 	}
 
 	private static int getNumberOfConfirmedVotes(final Configuration configuration, final Results tallyComponentDecrypt,
@@ -275,16 +397,16 @@ public class VerifierProcessor {
 						.map(countingCircle -> countingCircle.getDomainOfInfluence().stream()
 								.findFirst()
 								.map(domainOfInfluence -> {
-									final List<VoteType> voteList = domainOfInfluence.getVote();
-									final List<ElectionType> electionList = domainOfInfluence.getElection();
-									final boolean hasVotes = Objects.nonNull(voteList) && !voteList.isEmpty();
-									final boolean hasElections = Objects.nonNull(electionList) && !electionList.isEmpty();
+									final List<VoteType> votes = domainOfInfluence.getVote();
+									final List<ElectionGroupType> electionGroups = domainOfInfluence.getElectionGroup();
+									final boolean hasVotes = Objects.nonNull(votes) && !votes.isEmpty();
+									final boolean hasElections = Objects.nonNull(electionGroups) && !electionGroups.isEmpty();
 
 									if (hasVotes) {
-										return voteList.get(0).getBallot().size();
+										return votes.getFirst().getBallot().size();
 									} else {
 										if (hasElections) {
-											return electionList.get(0).getBallot().size();
+											return electionGroups.getFirst().getBallot().size();
 										} else {
 											return 0;
 										}
